# stick-around

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  eslint.config.js  package-lock.json  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  smoke-test.yml
gnome-extension/: extension.js  metadata.json
gnome-extension/schemas/: org.gnome.shell.extensions.stick-around.gschema.xml
linux/: stick-around.desktop
scripts/: bootstrap.cjs  bootstrap.ps1  bootstrap.sh  deps-windows.ps1  gen-icon.py  install-dev.ps1  setup-linux.sh
skills/play/: SKILL.md
skills/setup-linux/: SKILL.md
skills/stop/: SKILL.md
src/: collectibles.js  constants.js  drill.js  index.html  itemPhysics.js  main.js  manaMines.js  physics.js  platform-info.js  platforms.js  poses.js  progression.js  render.js  renderHud.js  renderShield.js  renderSplash.js  runStats.js  spells.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  text_analysis.rs  windows.rs
src-tauri/src/platform/linux/: atspi.rs  gnome_shell.rs
src/__tests__/: aloneInDark.test.js  axeSwing.test.js  collectibles.test.js  constants.test.js  constellation.test.js  drill.test.js  escapeLava.test.js  evilTwin.test.js  iceAge.test.js  itemPhysics.test.js  manaMines.test.js  meteorShower.test.js  missionShared.test.js  physics.test.js  platforms.test.js  poses.test.js  posture.test.js  progression.test.js  render.test.js  runStats.test.js  shardfall.test.js  spellWarmup.test.js  spells.test.js
src/missions/: _shared.js  aloneInDark.js  constellation.js  escapeLava.js  evilTwin.js  iceAge.js  meteorShower.js  shardfall.js  spellWarmup.js
src/missions/constellation/: render.js
src/missions/evilTwin/: render.js
src/missions/iceAge/: render.js
src/missions/shardfall/: render.js
